# reusable-documents

./: README.md  initialize.sh
backend/: .env.sample  Dockerfile  docker-compose.yaml  pyproject.toml
backend/server/: main.py
backend/server/config/: factory.py
backend/server/config/environments/: base.py  development.py  production.py  staging.py
backend/server/database/: factory.py  user.py
backend/server/documents/: user.py
backend/server/routes/: user.py
backend/server/schemas/: base.py  user.py
data/: .env.sample  config.py  main.py  pyproject.toml
data/database/: manager.py  user.py
data/resources/: profile.json  user.json
models/: pyproject.toml  setup.cfg  setup.py
models/models/: user.py
