[tool.poetry]
name = "web api"
version = "0.1.0"
description = "A collection of endpoints and utilities that builds a web api that fetches data from MongoDB using beanie"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
coverage = "^7.2.1"
python-decouple = "^3.7"
pydash = "^6.0.2"
fastapi = {extras = ["all"], version = "^0.92.0"}
beanie = "^1.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.252"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
