[tool.poetry]
name = "reusable models"
version = "0.1.0"
description = "A collection of Pydantic models that can be reused and extended by anything that are built on top of pydantic"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
coverage = "^7.2.1"
python-decouple = "^3.7"
pydash = "^6.0.2"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.5"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.252"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
