[metadata]
name = pydantic-mongo-reusables
version = 0.1
description = A collection of Pydantic models that can be reused and extended by anything that are built on top of pydantic.
long_description = file: README.md
url = https://www.example.com/
author = Md Abdur Rakib
author_email = abdur.rakib.1508@gmail.com
license = Apache License 2.0
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    pydantic >= 1.10.5
    python-dotenv >= 0.10.4
    email-validator >= 1.0.3
    pydash >= 6.0.2
    python-decouple >= 3.7
